fixed wrap text in table

--- a/src/screens/MedicinesScreen/medicines.scss
+++ b/src/screens/MedicinesScreen/medicines.scss
@@ -5,7 +5,7 @@
 
   //margin-left: 10%;
 
-  width: 90%;
+  width: 98%;
   height: 90%;
 }
 
